--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,50 +5,50 @@
     state: latest
 
 - name: Set same timezone on every Server
-  timezone:
+  ansible.builtin.timezone:
     name: "{{ system_setup_timezone }}"
 
 - name: Set SELinux to disabled state
-  selinux:
+  ansible.builtin.selinux:
     state: disabled
   when: ansible_os_family == "RedHat"
 
 - name: Enable IPv4 forwarding
-  sysctl:
+  ansible.builtin.sysctl:
     name: net.ipv4.ip_forward
     value: "1"
     state: present
     reload: yes
 
 - name: Enable IPv6 forwarding
-  sysctl:
+  ansible.builtin.sysctl:
     name: net.ipv6.conf.all.forwarding
     value: "1"
     state: present
     reload: yes
 
 - name: Enable IPv6 router advertisements
-  sysctl:
+  ansible.builtin.sysctl:
     name: net.ipv6.conf.all.accept_ra
     value: "2"
     state: present
     reload: yes
 
 - name: Add br_netfilter to /etc/modules-load.d/
-  copy:
+  ansible.builtin.copy:
     content: "br_netfilter"
     dest: /etc/modules-load.d/br_netfilter.conf
     mode: "u=rw,g=,o="
   when: ansible_os_family == "RedHat"
 
 - name: Load br_netfilter
-  modprobe:
+  ansible.builtin.modprobe:
     name: br_netfilter
     state: present
   when: ansible_os_family == "RedHat"
 
 - name: Set bridge-nf-call-iptables (just to be sure)
-  sysctl:
+  ansible.builtin.sysctl:
     name: "{{ item }}"
     value: "1"
     state: present
@@ -59,7 +59,7 @@
     - net.bridge.bridge-nf-call-ip6tables
 
 - name: Add /usr/local/bin to sudo secure_path
-  lineinfile:
+  ansible.builtin.lineinfile:
     line: 'Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin'
     regexp: "Defaults(\\s)*secure_path(\\s)*="
     state: present
@@ -67,3 +67,7 @@
     path: /etc/sudoers
     validate: 'visudo -cf %s'
   when: ansible_os_family == "RedHat"
+
+- name: Set hostname
+  ansible.builtin.hostname:
+   name: {{ inventory_hostname }}
