--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -71,3 +71,11 @@
 - name: Set hostname
   ansible.builtin.hostname:
    name: "{{ inventory_hostname }}"
+
+- name: Update grub
+  ansible.builtin.lineinfile: 
+    path: /etc/default/grub
+    regexp: "^GRUB_CMDLINE_LINUX"
+    line: "GRUB_CMDLINE_LINUX="net.ifnames=0 biosdevname=0""
+    state: present
+  notify: make grub config
