--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -76,6 +76,6 @@
   ansible.builtin.lineinfile: 
     path: /etc/default/grub
     regexp: "^GRUB_CMDLINE_LINUX"
-    line: "GRUB_CMDLINE_LINUX="net.ifnames=0 biosdevname=0""
+    line: 'GRUB_CMDLINE_LINUX="net.ifnames=0 biosdevname=0"'
     state: present
   notify: make grub config
