--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,3 +12,4 @@ system_setup_packages:
   - jq
   - net-tools
 system_setup_timezone: "Europe/Zurich"
+system_setup_hostname: "{{ inventory_hostname }}"
