--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -227,7 +227,7 @@
 
 - name: Set hostname
   ansible.builtin.hostname:
-   name: "{{ inventory_hostname }}"
+   name: "{{ system_setup_hostname }}"
 
 - name: Update grub
   ansible.builtin.lineinfile: 
