--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,5 +14,6 @@ system_setup_packages:
   - traceroute
   - tcpdump
   - iputils-ping
+  - mtr
 system_setup_timezone: "Europe/Zurich"
 system_setup_hostname: "{{ inventory_hostname }}"
